--- a/Global Weather Trends/README
+++ b/Global Weather Trends/README
@@ -1,4 +1,3 @@
-** This folder contain tow files: **
-
+This folder contain tow files:
 1. Global Weather Trends (Google Sheet).ods
 2. Exploring Weather Trends Steps and Conclusion.pdf 
