--- a/Global Weather Trends/README
+++ b/Global Weather Trends/README
@@ -1,7 +1,8 @@
 
 **Tools:** Python, SQL, Google Sheets<br>
 
-This poject was completed as part of Udacity Data Analyst Nanodegree. In this project, I've used a bit of SQL to download data from Udacity portal, also used Google Sheets to analyze global/local temperature, and to compare trends.
+This poject was completed as part of Udacity Data Analyst Nanodegree. In this project, I've used a bit of SQL to download data from Udacity portal, 
+also used Google Sheets to analyze global/local temperature, and to compare trends.
 
 This folder contain tow files:
 1. Global Weather Trends (Google Sheet).ods
