--- a/Global Weather Trends/README
+++ b/Global Weather Trends/README
@@ -1,5 +1,5 @@
 
-**Tools:** Python, SQL, Google Sheets<br>
+Tools: Python, SQL, Google Sheets
 
 This poject was completed as part of Udacity Data Analyst Nanodegree. In this project, I've used a bit of SQL to download data from Udacity portal, 
 also used Google Sheets to analyze global/local temperature, and to compare trends.
