--- a/Global Weather Trends/README
+++ b/Global Weather Trends/README
@@ -4,6 +4,6 @@ Tools: Python, SQL, Google Sheets
 This poject was completed as part of Udacity Data Analyst Nanodegree. In this project, I've used a bit of SQL to download data from Udacity portal, 
 also used Google Sheets to analyze global/local temperature, and to compare trends.
 
-The folder contain two files:
-1. Global Weather Trends (Google Sheet).ods
-2. Exploring Weather Trends Steps and Conclusion.pdf 
+Colculations and visualisations were made in Google Sheets, please check "Global Weather Trends (Google Sheet).ods" file.
+
+For steps and conclucion, please check "Exploring Weather Trends Steps and Conclusion.pdf" file.
